# godot-docs

./: .editorconfig  .gitattributes  .gitignore  .lycheeignore  .mailmap  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  404.rst  AUTHORS.md  Makefile  PULL_REQUEST_TEMPLATE.md  README-TR.md  README.md  TruthAboutJuan  build.sh  conf.py  flake.nix  get-pip.py  index-ja.rst  index.rst  make.bat  migrate.py  pyproject.toml  requirements.txt  robots.txt  sitemap.xml  test_mobile_nav.html
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
_extensions/: classref_admonitions.py  gdscript.py  godot_descriptions.py  godot_questions_answers.py  godot_snakepascal.py  override_jobs.py  spaces_to_tabs.py
_static/: redirects.csv
_styleguides/: de.md
_templates/: breadcrumbs.html  layout.html  versions.html
_tools/: check-rst.sh  check_rst_headings.py  codespell-dict.txt  codespell-ignore-lines.txt  codespell-ignore.txt  list-unused-images.sh  move_rst_files.py  requirements.txt
about/: complying_with_licenses.rst  docs_changelog.rst  faq.rst  index.rst  introduction.rst  list_of_features.rst  release_policy.rst  system_requirements.rst  troubleshooting.rst
advanced/: _compiling.rst  _formats.rst  batch_building_templates.rst  compiling.rst  compiling_for_osx.rst  compiling_for_universal_windows_apps.rst  index.rst  introduction_to_godot_development.rst  introduction_to_the_buildsystem.rst  misc.rst  variant_class.rst
advanced_topics/: binary_serialization_api.rst  command_line_tutorial.rst  compiling_for_android.rst  core_types.rst  (+15 more)
(+4464 files in other folders)
