[project]
name = "godot-docs"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pygments (==2.19.2)",
    "sphinx (==8.1.3)",
    "sphinx-rtd-theme (==3.1.0)",
    "sphinx-tabs (==3.4.7)",
    "sphinx-copybutton (==0.5.2)",
    "sphinx-notfound-page (==1.1.0)",
    "sphinxext-opengraph (==0.13.0)",
    "sphinxcontrib-video (==0.4.2)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.ruff]
line-length = 120

[tool.codespell]
dictionary = ["_tools/codespell-dict.txt", "-"]
ignore-words = "_tools/codespell-ignore.txt"
exclude-file = "_tools/codespell-ignore-lines.txt"
skip = "tutorials/i18n/locales.rst"
